infra/traefik-helper/traefik-helper-favicon-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-helper-favicon
spec:
  redirectRegex:
    regex: ^.*.ieeetamu.org/favicon(.svg|.ico|-96x96.png)$
    replacement: https://traefik-helper.ieeetamu.org/favicon$1
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-helper-webmanifest
spec:
  redirectRegex:
    regex: ^.*.ieeetamu.org/(site.webmanifest|web-app-manifest-(?:192x192|512x512).png)$
    replacement: https://traefik-helper.ieeetamu.org/$1
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-helper-touchicon
spec:
  redirectRegex:
    regex: ^.*.ieeetamu.org/apple-touch-icon.png$
    replacement: https://traefik-helper.ieeetamu.org/apple-touch-icon.png
    permanent: true
