infra/traefik-helper/traefik-helper-redirects-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: www-redirect
spec:
  redirectRegex:
    regex: ^https?://www.ieeetamu.org/(.*)
    replacement: https://ieeetamu.org/$1
    permanent: true
