infra/traefik-helper/traefik-helper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-helper
spec:
  selector:
    app: traefik-helper
  type: ClusterIP
  ports:
    - name: http
      port: 80
