infra/traefik-helper/traefik-helper-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-helper
spec:
  routes:
    - match: Host(`traefik-helper.ieeetamu.org`)
      kind: Rule
      services:
        - name: traefik-helper
          port: 80
    - match: HostRegexp(`.+\.ieeetamu\.org`)
      priority: 1 # lowest priority catch-all
      kind: Rule
      services:
        - name: traefik-helper
          port: 80
      middlewares:
        # - name: conference-redirect
        - name: www-redirect
